@@ -34,6 +34,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Added functional.partial().  See PEP309.
+
 - Patch #1093585: raise a ValueError for negative history items in readline.
   {remove_history,replace_history}
 
